add support for 1.8 - 1.20.4