@@ -13,6 +13,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.logging.Level;
+import java.util.stream.Collectors;
 
 public class AlwaysHalfHeart extends JavaPlugin {
 
@@ -93,7 +94,7 @@ public class AlwaysHalfHeart extends JavaPlugin {
                     }
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<EntityDamageEvent.DamageCause> getDamageCausesList() {
